--- a/composer.json
+++ b/composer.json
@@ -22,5 +22,8 @@
     "php-di/php-di": "^7.0",
     "monolog/monolog": "^3.3",
     "symfony/dotenv": "^6.2"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^10.3"
   }
 }
