--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "prettier": "^3.0.2",
     "vue": "^3.2.47",
     "vue-router": "^4.2.0"
   },
