--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.0.18",
     "axios": "^1.4.0",
     "vue": "^3.2.47",
     "vue-router": "^4.2.0"
