--- a/package.json
+++ b/package.json
@@ -17,9 +17,14 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
     "autoprefixer": "^10.4.14",
+    "eslint": "^8.48.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-vue": "^9.17.0",
     "postcss": "^8.4.23",
     "prettier": "^3.0.2",
     "tailwindcss": "^3.3.2",
-    "vite": "^4.3.0"
+    "vite": "^4.3.0",
+    "vite-plugin-eslint": "^1.8.1"
   }
 }
