--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/vue": "^2.0.18",
     "axios": "^1.4.0",
+    "pinia": "^2.1.6",
     "vue": "^3.2.47",
     "vue-router": "^4.2.0"
   },
