--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
     "symfony/dotenv": "^6.2"
   },
   "require-dev": {
-    "phpunit/phpunit": "^10.3"
+    "phpunit/phpunit": "^10.3",
+    "phpstan/phpstan": "^1.10"
   }
 }
