--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,9 @@
 services:
-    web:
-        image: nginx:latest
+    frontend:
+        image: monsterdb-frontend
         ports:
             - '8080:80'
-        volumes:
-            - ./:/var/www/html
-            - ./docker/nginx.conf:/etc/nginx/conf.d/default.conf
         links:
-            - php-fpm
-    php-fpm:
-        image: php:8-fpm
-        volumes:
-            - ./:/var/www/html
+            - backend
+    backend:
+        image: monsterdb-backend
